[package]
name = "rinha-compilers"
version = "0.1.0"
edition = "2024"
authors = ["Vinicius Gomes <vinicius.svgomes@gmail.com>"]
description = "My implementation for the 'Rinha de Compilers' made only 3 years late."
repository = "https://github.com/vinisilvag/rinha-compilers"
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
